--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
 dailystart_news_extension
 =========================
 
-Yet another chrome extension that shows latest news headlines from www.thedailystar.net
+Yet another chrome extension that shows[desktop notify] latest news headlines from www.thedailystar.net
